[package]
name = "dot-txt"
version = "0.1.0"
edition = "2021"
default-run = "dot-txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf8-chars = "1.0.0"
line_drawing = "1.0.0"
vector2d = "2.2.0"

[[bin]]
name = "dot-txt"
path = "src/bin/main.rs"

[[bin]]
name = "dot-txt-font-gen"
path = "src/bin/font-gen.rs"

[lib]
name = "dot_txt"
path = "src/lib/lib.rs"
